1. Add Approved and Cancelled request in Awaiting Request