@@ -1,6 +1,5 @@
 .list-item {
   border-radius: 3px;
-  border-left: 10px solid rgb(102, 23, 250);
   height: 40px;
   box-shadow: 0 2px 2px 0 rgba(14, 30, 37, 0.12) !important;
   overflow: hidden;
