@@ -16,7 +16,7 @@
     <div class="list-item-inner">
       <div class="row">
         <div class="col-lg-4">
-          <label>{{ r?.name }}</label>
+          <span class="fs">{{ r?.name }}</span>
         </div>
         <div class="col-2">
           <span class="fs"><i class="fa fa-user mr-1" aria-hidden="true"></i>{{ r?.createdBy | getName | async}}</span>
