@@ -3,7 +3,7 @@
     <div>
       <nb-card>
         <nb-card-header>
-          <label class="">Add {{type | titlecase}}</label>
+          <label class="label">Add {{type | titlecase}}</label>
         </nb-card-header>
         <nb-card-body>
           <div class="row">
