@@ -2,7 +2,9 @@
   <nb-card-header>
     <h4>{{ rfo?.name }}</h4>
     <button *ngIf="
-        userS.UserInfo?.id === rfo?.createdBy && !rfo?.resolved && rfo.status === rfoS.PENDING
+        userS.UserInfo?.id === rfo?.createdBy &&
+        !rfo?.resolved &&
+        rfo.status === rfoS.PENDING
       " class="mx-2" nbButton status="danger" size="madium" (click)="cancel()">
       Cancel RFO
     </button>
@@ -21,10 +23,18 @@
         </nb-list-item>
         <nb-list-item *ngFor="let item of rfo?.items">
           <div class="row w-100">
-            <div class="col-md-4"><label>{{ item?.name }}</label></div>
-            <div class="col-md-2"><label>{{ item?.amount }}</label></div>
-            <div class="col-md-3"><label>{{ item?.quantity }}</label></div>
-            <div class="col-md-3"><label>{{ item?.total }}</label></div>
+            <div class="col-md-4">
+              <label>{{ item?.name }}</label>
+            </div>
+            <div class="col-md-2">
+              <label>{{ item?.amount }}</label>
+            </div>
+            <div class="col-md-3">
+              <label>{{ item?.quantity }}</label>
+            </div>
+            <div class="col-md-3">
+              <label>{{ item?.total }}</label>
+            </div>
           </div>
         </nb-list-item>
       </nb-list>
@@ -32,38 +42,58 @@
     <div class="my-2">
       <nb-list>
         <nb-list-item>
-          Created By: <b>{{ rfo?.createdBy | getName | async }}</b>
+          <span>
+            <label class="label">Created By:</label>
+            <label><b>{{ rfo?.createdBy | getName | async }}</b></label>
+          </span>
         </nb-list-item>
         <nb-list-item>
-          Created on: <b>{{ rfo?.createdOn | date }}</b>
-        </nb-list-item>
-        <nb-list-item> Additional Info: {{ rfo?.detail }} </nb-list-item>
-        <nb-list-item>
-          Status: <b>{{ rfo?.status | uppercase }}</b>
-        </nb-list-item>
-        <nb-list-item *ngIf="rfo?.resolved">
-          Resolved On: <b>{{ rfo?.resolvedOn }}</b>
+          <span>
+            <label class="label">Created on:</label>
+            <label><b>{{ rfo?.createdOn | date }}</b></label>
+          </span>
         </nb-list-item>
         <nb-list-item>
-          Comment: <b>{{ rfo?.comment }}</b>
+          <span>
+            <label class="label">Additional Info:</label>
+            <label> <b>{{ rfo?.detail }} </b> </label>
+          </span>
         </nb-list-item>
         <nb-list-item>
-          Attachment: <a *ngIf="rfo?.attachment" [href]="rfo?.attachment" target="_blank">
-            <b>Click to Download </b>
-          </a>
-          <span *ngIf="!rfo?.attachment"> None</span>
+          <span>
+            <label class="label">Status:</label>
+            <label><b>{{ rfo?.status | uppercase }}</b></label>
+          </span>
         </nb-list-item>
-
+        <nb-list-item>
+          <span>
+            <label class="label"> Comment:</label>
+            <label><b>{{ rfo?.comment }}</b></label>
+          </span>
+        </nb-list-item>
+        <nb-list-item>
+          <span>
+            <label class="label">Attachment:</label>
+            <a *ngIf="rfo?.attachment" [href]="rfo?.attachment" target="_blank">
+              <b>Click to Download </b>
+            </a>
+            <label><b *ngIf="!rfo?.attachment"> None</b></label>
+          </span>
+        </nb-list-item>
       </nb-list>
     </div>
   </nb-card-body>
-  <nb-card-footer *ngIf="userS.UserInfo?.role == role.ADMIN && !rfo?.resolved">
-    <p class="text-danger mb-2">
-      Note: Once a request is Approved or Denied, it can be changed.
-      Changes will have to be made from purchase order
+  <nb-card-footer *ngIf="userS.UserInfo?.role == role.ADMIN && rfo?.status === rfoS.PENDING">
+    <p *ngIf="rfo?.type == 'order'" class="text-danger mb-2">
+      Note: Once a request is Approved or Denied, it can be changed. Changes
+      will have to be made from purchase order
     </p>
 
-    <button class="mx-1" nbButton status="success" size="large" (click)="approve()">Approve</button>
-    <button class="mx-1" nbButton status="danger" size="large" (click)="deny()">Deny</button>
+    <button class="mx-1" nbButton status="success" size="medium" (click)="approve()">
+      Approve
+    </button>
+    <button class="mx-1" nbButton status="danger" size="medium" (click)="deny()">
+      Deny
+    </button>
   </nb-card-footer>
 </nb-card>
